--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 PyQt5~=5.15.6
 qtmodern~=0.2.0
-numpy~=1.21.4
-matplotlib~=3.5.0
-pyinstaller~=4.7
+numpy~=1.21.5
+matplotlib~=3.5.1
+pyinstaller~=4.8
+mplcursors~=0.5.1
