--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -41,7 +41,7 @@ jobs:
       run: |
         python3 -m pip install --upgrade pip
         pip3 install -r requirements.txt
-        pyinstaller -D -n=ScopeFromatterWindows --clean --windowed --add-data 'dracula.mplstyle;.' --add-data 'resources;resources' --additional-hooks-dir=. --icon=./resources/icon.ico scope_formatter.py
+        pyinstaller -D -n=ScopeFromatterWindows --clean --windowed --add-data 'dracula.mplstyle;.' --add-data 'resources;resources' --additional-hooks-dir=. --splash ./resources/logo.png --icon=./resources/icon.ico scope_formatter.py
     - name: Upload Artifact
       uses: actions/upload-artifact@v2
       with:
